force-app/main/default/objects/AuditResourceAllocate__c/fields/AttendeeID__c.field-meta.xml
<CustomField>
    <fullName>AttendeeID__c</fullName>
    <label>Attendee ID</label>
    <referenceTo>WORKER__c</referenceTo>
    <relationshipName>AuditResource</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>