force-app/main/default/objects/AuditResourceAllocate__c/fields/AttendeeRole__c.field-meta.xml
<CustomField>
    <fullName>AttendeeRole__c</fullName>
    <label>Attendee Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WorkRole</valueSetName>
    </valueSet>
</CustomField>