force-app/main/default/objects/AuditResourceAllocate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AuditID__c</columns>
    <columns>AttendeeID__c</columns>
    <columns>AttendeeDetail__c</columns>
    <columns>AttendeeRole__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>